--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,12 @@
 @import url(../../main.css);
 
 .navbar {
+    /*
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    */
 
     display: flex;
     align-items: right;
