Adjusts main navbar, mainsection and separator to model

--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -3,12 +3,12 @@
 .main-section{
     width: 100%;
     height: 100%;
-    margin: 0 auto;
-    padding: 0;
-    background: #ff687d;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 
+    background: white;
     display: flex;
-    color: #fffddc;
+    color: black;
 }
 
 .main-section img {
