--- a/src/components/Separator/Separator.css
+++ b/src/components/Separator/Separator.css
@@ -1,6 +1,6 @@
 .separator {
     width: 100%;
-    height: 45px;
+    height: 20px;
 
-    background-color: #fffddc;
+    background-color: black;
 }
