--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
     align-items: right;
     justify-content: flex-end;
 
-    background: #fffddc;
+    background: black;
     backdrop-filter: blur(10px);
     
     padding: 10px 10px 10px 10px;
