--- a/src/components/MainSection/MainSection.css
+++ b/src/components/MainSection/MainSection.css
@@ -18,7 +18,8 @@
 .main-section p {
     margin-top: 10%;
     text-align: left;
-    max-width: 30%;
+    max-width: 50%;
+    word-wrap: break-word;
 }
 
 .main-section h1 {
